--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^9.6.11",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-select": "^5.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
