--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "firebase": "^9.6.11",
+    "javascript-time-ago": "^2.3.13",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-select": "^5.3.0"
+    "react-select": "^5.3.0",
+    "recoil": "^0.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
