--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.6.11",
+    "i18n-iso-countries": "^7.4.0",
     "javascript-time-ago": "^2.3.13",
     "next": "12.1.5",
     "react": "18.0.0",
