--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "firebase": "^9.6.11",
     "i18n-iso-countries": "^7.4.0",
     "javascript-time-ago": "^2.3.13",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-select": "^5.3.0",
     "recoil": "^0.7.2"
   },
   "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "13.2.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "5.0.2"
   }
 }
