--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.6.11",
-    "i18n-iso-countries": "^7.4.0",
-    "javascript-time-ago": "^2.3.13",
-    "react-select": "^5.3.0",
-    "recoil": "^0.7.2",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.6.11",
+    "i18n-iso-countries": "^7.4.0",
+    "javascript-time-ago": "^2.3.13",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.3.0",
+    "recoil": "^0.7.2",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
