--- a/package.json
+++ b/package.json
@@ -2,32 +2,37 @@
   "name": "vac-list",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-db": "tsx ./src/utils/migrate-db.ts"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "firebase": "^9.6.11",
-    "i18n-iso-countries": "^7.4.0",
-    "javascript-time-ago": "^2.3.13",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "react-select": "^5.3.0",
-    "sharp": "^0.32.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "@reduxjs/toolkit": "^2.2.5",
+    "@types/node": "20.13.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
+    "eslint": "9.4.0",
+    "eslint-config-next": "14.2.3",
+    "firebase": "^10.12.2",
+    "i18n-iso-countries": "^7.11.2",
+    "javascript-time-ago": "^2.5.10",
+    "next": "14.2.3",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
+    "sharp": "^0.33.4",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "tailwindcss": "3.4.3",
+    "tsx": "^4.11.0",
+    "typescript": "5.4.5"
   }
 }
