--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "migrate-db": "tsx ./src/utils/migrate-db.ts"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
     "@types/node": "20.13.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -22,11 +21,11 @@
     "firebase": "^10.12.2",
     "i18n-iso-countries": "^7.11.2",
     "javascript-time-ago": "^2.5.10",
+    "jotai": "^2.8.3",
     "next": "14.2.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "sharp": "^0.33.4",
     "sqlite": "^5.1.1",
